--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,16 @@ code {
 }
 body {
   background: #E5E5E5;
-
+  background-image: url(pic.jpeg);
+  background-position: center;
+  background-size: contain;
   padding: 50px;
 }
 
 #card-front {
   color: #FFDFDF;
 }
+
 
 #card, #card-front, #card-inside {
   height: 480px;
@@ -195,4 +198,11 @@ footer {
   line-height: 1.6;
   color: #888;
   text-align: center;
+}
+#btn{
+  background: greenyellow;
+  margin: 10px;
+  padding: 20px 50px;
+  border: 5px solid rgb(75, 75, 122);
+  border-radius: 10px;
 }
